<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:contentDescription="@string/paper"
        android:src="@drawable/ic_paper_plane" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/otp_verification"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/we_will_send_you_an_one_time_password_on_this_number"
        android:textColor="@color/LightSlateGray"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/please_enter_your_number"
        android:textColor="@color/LightSlateGray"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_84"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:background="@null"
            android:hint="@string/_1234567890"
            android:imeOptions="actionDone"
            android:inputType="phone|number"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_60sdp"
        android:background="@color/black" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:animateLayoutChanges="true">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/round_otp_blue_15"
            android:text="@string/get_otp"
            android:textColor="@color/White"
            android:textStyle="bold" />


    </FrameLayout>


</LinearLayout>