<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/Black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/please_login_to_your_account" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="@dimen/_10sdp"
        android:focusable="true"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp" />

        <ImageButton
            android:id="@+id/btnTogglePassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/LightGrey"
            android:src="@drawable/baseline_visibility_off_24" />
    </FrameLayout>

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/DeepSkyBlue"
        android:textSize="@dimen/_10sdp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.AppCompatButton
            android:textStyle="bold"
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/round_button_blue_15"
            android:text="@string/sign_in" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />


    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_toStartOf="@+id/tvOr"
            android:background="@color/Black" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or"
            android:textColor="@color/Black" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@+id/tvOr"
            android:background="@color/Black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15"
        android:paddingStart="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:src="@drawable/google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/LightGrey"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/sign_up"
            android:textColor="@color/DeepSkyBlue"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>