<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSteelBlue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up1"
        android:textColor="@color/Black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/create_a_new_account" />



    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15"
        android:focusable="true"
        android:hint="@string/full_name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15"
        android:focusable="true"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15"
        android:focusable="true"
        android:hint="@string/phone"
        android:imeOptions="actionNext"
        android:inputType="phone|number"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp" />

        <ImageButton
            android:id="@+id/btnTogglePassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/baseline_visibility_24" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_back_grey_15">

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp" />

        <ImageButton
            android:id="@+id/btnToggleConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/baseline_visibility_24" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/round_button_blue_15"
            android:text="@string/sign_up1" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />


    </FrameLayout>



    <LinearLayout
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account"
            android:textColor="@color/LightGrey"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/sign_in"
            android:textColor="@color/DeepSkyBlue"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>