<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OnboardingActivity">


    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/skip"
        android:textColor="@color/DeepSkyBlue"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/White"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@drawable/ellipse2" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/next1"
            android:textColor="@color/White"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </FrameLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/container_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnBack"
        android:layout_below="@id/btnSkip" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNext"
        android:layout_marginBottom="@dimen/_10sdp"
        app:ci_drawable="@color/DeepSkyBlue"
        app:ci_drawable_unselected="@color/Black"
        app:ci_height="@dimen/_5sdp"
        app:ci_width="@dimen/_5sdp" />


</RelativeLayout>